--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0.0-beta.21"
+actix-cors = "0.6.0-beta.8"
 chrono = "0.4.19"
 chrono-tz = "0.6.1"
 serde_json = "1.0.78"
