--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-beta.21"
+actix-web = {version = "4.0.0-beta.21", features = ["openssl"]}
 actix-cors = "0.6.0-beta.8"
 chrono = "0.4.19"
 chrono-tz = "0.6.1"
+openssl = {version = "0.10.38", features=["v110"]}
 serde_json = "1.0.78"
 serde = "1.0.136"
 
