--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
