--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = {version = "4.2.1", features = ["openssl"]}
-actix-cors = "0.6.4"
-chrono = "0.4.23"
-chrono-tz = "0.8.1"
-openssl = {version = "0.10.45", features=["v110"]}
-serde_json = "1.0.91"
-serde = {version="1.0.152", features=["derive"]}
+actix-web = {version = "4.4.1"}
+actix-cors = "0.6.5"
+actix-files = "0.6.2"
+chrono = "0.4.31"
+chrono-tz = "0.8.5"
+serde_json = "1.0.111"
+serde = {version="1.0.194", features=["derive"]}
 
